--- a/Ni2+-CEF-WeakCoupling.ipynb
+++ b/Ni2+-CEF-WeakCoupling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Susceptibility and Crystal Field Levels of tetrahedral Ni$^{2+}$\n",
+    "# Susceptibility and Crystal Field Levels of tetrahedral and octahedral Ni$^{2+}$\n",
     "\n",
     "Allen Scheie\n",
     "\n",
