Add example fit file, and update YTO import files

--- a/examples/YTO_importCIF/YTO.ipynb
+++ b/examples/YTO_importCIF/YTO.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -35,12 +35,13 @@
       "Central ion: Yb3+ at [0.5, 0.5, 0.5]\n",
       "   Found 3 fold axis about [1. 1. 1.]\n",
       "   Found mirror plane: [-0.70710678  0.          0.70710678]\n",
+      " Nearest ligand: O2-\n",
       "   Identified 8 O2- ligands.\n",
       "\n",
       "\u001b[44m  Axes for point charge model (in ABC space):\n",
-      "        X axis = [-0.40824829  0.81649658 -0.40824829] \n",
-      "        Y axis = [-0.70710678  0.          0.70710678] \n",
-      "        Z axis = [0.57735027 0.57735027 0.57735027] \u001b[0m\n",
+      "        X axis = [-0.5  1.  -0.5] \n",
+      "        Y axis = [-1.  0.  1.] \n",
+      "        Z axis = [1. 1. 1.] \u001b[0m\n",
       "\n",
       "   Creating a point charge model...\n",
       "B_2 0  =  0.53552196\n",
@@ -64,12 +65,14 @@
    "source": [
     "########### Import CIF file\n",
     "\n",
-    "YTOLig, Yb = cef.importCIF('yto.cif','Yb1')"
+    "YTOLig, Yb = cef.importCIF('yto.cif','Yb1')\n",
+    "\n",
+    "### NOTE: one could specify the z axis by including the Zaxis variable in the function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,11 +84,11 @@
       "\t\t---------------------------------------------------------------\n",
       "0.00000 \t|  [ 0.374  0.     0.     0.921  0.     0.    -0.105  0.   ]  |\n",
       "0.00000 \t|  [ 0.    -0.105  0.     0.    -0.921  0.     0.     0.374]  |\n",
-      "38.61543 \t|  [ 0.     0.001  0.     0.    -0.376  0.     0.    -0.926]  |\n",
-      "38.61543 \t|  [ 0.926  0.     0.    -0.376  0.     0.    -0.001  0.   ]  |\n",
-      "47.10950 \t|  [ 0.     0.    -0.121  0.     0.     0.993  0.     0.   ]  |\n",
-      "47.10950 \t|  [0.    0.    0.993 0.    0.    0.121 0.    0.   ]  |\n",
-      "75.14028 \t|  [ 0.04  -0.     0.     0.097  0.     0.     0.994  0.   ]  |\n",
+      "38.61543 \t|  [ 0.    -0.001  0.     0.     0.376  0.     0.     0.926]  |\n",
+      "38.61543 \t|  [-0.926  0.     0.     0.376  0.     0.     0.001  0.   ]  |\n",
+      "47.10950 \t|  [ 0.     0.    -0.958  0.     0.     0.288  0.     0.   ]  |\n",
+      "47.10950 \t|  [0.    0.    0.288 0.    0.    0.958 0.    0.   ]  |\n",
+      "75.14028 \t|  [-0.04   0.     0.    -0.097  0.     0.    -0.994  0.   ]  |\n",
       "75.14028 \t|  [ 0.     0.994  0.     0.    -0.097  0.     0.     0.04 ]  |\n",
       "\t\t---------------------------------------------------------------\n",
       "\n"
@@ -95,13 +98,12 @@
    "source": [
     "########### print eigenvectors\n",
     "\n",
-    "Yb.diagonalize()\n",
     "Yb.printEigenvectors()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
